--- a/admin/style_old.css
+++ b/admin/style_old.css
@@ -11,23 +11,14 @@ body
 #main
 {
 	width:950px;
+	text-align: left;
 }
 #top
 {
 	width:950px;
-	background:url(images/top.gif) no-repeat;
+	background:url('images/top.gif') no-repeat;
 	height:41px;
-	color:#CC6600;
-}
-a
-{
-	color:#CC3300;
-	text-decoration:none;
-}
-a:hover
-{
-	color:#FF6600;
-	text-decoration:underline;
+	color:#CC6600
 }
 #top a
 {
@@ -41,14 +32,14 @@ a:hover
 }
 #head
 {
-	background:url(images/head.gif) no-repeat;
-	height:95px;
+	background:url('images/head.gif') no-repeat;
+	height:95px
 }
 #menu
 {
-	background:url(images/menu.gif) repeat-x;
+	background:url('images/menu.gif') repeat-x;
 	color:#FFFFFF;
-	height:30px;
+	height:30px
 }
 #menu a
 {
@@ -66,11 +57,11 @@ a:hover
 }
 #footer
 {
-	background:url(images/footer.jpg) no-repeat;
+	background:url('images/footer.jpg') no-repeat;
 	height:70px;
 	text-align:center;
 	color:#CC0000;
-	font-size:14px;
+	font-size:14px
 }
 #footer a
 {
@@ -101,44 +92,4 @@ a:hover
 	font-size:18px;
 	font-weight:bold;
 	text-align:center;
-}
-#box_left
-{
-	background:url(images/box_left.gif) no-repeat;
-	height:31px;
-	width:18px;
-}
-#box_mid
-{
-	background:url(images/box_mid.gif) repeat-x;
-	height:31px;
-	color:#FFFFFF;
-	font-weight:bold;
-}
-#box_right
-{
-	background:url(images/box_right.gif) no-repeat;
-	height:31px;
-	width:18px;
-}
-#box_border
-{
-	border:solid 1px #990000;
-}
-#profile_top
-{
-	background:url(images/top_profile.gif) no-repeat;
-	width:902px;
-	height:12px;
-}
-#profile_mid
-{
-	background:url(images/mid_profile.gif) repeat-y;
-	width:902px;
-}
-#profile_bot
-{
-	background:url(images/bot_profile.gif) no-repeat;
-	width:902px;
-	height:12px;
 }
